welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:2: error: not found: type int
var or:int=0;
       ^RunHalf:3: error: not found: type int
var bi:int=0;
       ^