welcome.lessons.welcome.variables.RunHalf.scala.code
var or:int=0;
var bi:int=0;
while ((bi==0)||(or==0)||((2*bi)>or)){
	if (estSurOrange()){
		or=or+1;
	}
	if (estSurBiscuit()){
		bi=bi+1;
	}
	avance();
}
